# politiscope

./: .env  .replit  ai_analyzer.py  analyzer.py  app.py  models.py  page.txt  pyproject.toml  replit.md  route.txt  scraper.py  transcript_extractor.py
analysis_system/: README.md  package.json
analysis_system/app/: globals.css  layout.tsx  page.tsx
analysis_system/scripts/: cda_specification.py  cda_web_interface.py
attached_assets/: Pasted--TabsContent-value-results-className-space-y-6-isAnalyzing-Ca-1756814476511_1756814476511.txt  Pasted--venv-PS-C-Users-USER-Desktop-projects-PolitiScope-python-c-import-textblob-textblob-download--1756590113721_1756590113723.txt  Pasted--venv-PS-C-Users-USER-Desktop-projects-PolitiScope-python-main-py-nltk-data-Error-loading-pun-1756591983614_1756591983616.txt  Pasted--venv-PS-C-Users-USER-Desktop-projects-PolitiScope-python-main-py-nltk-data-Error-loading-pun-1756652347049_1756652347051.txt  Pasted-Create-a-comprehensive-Political-Discourse-Analysis-web-application-with-the-following-specification-1756583575189_1756583575200.txt  Pasted-Discourse-Analyzer-Web-Application-Development-Brief-Overview-Create-a-modern-academic-themed-dis-1756824142722_1756824142722.txt  Pasted-THE-PRESIDENT-Speaker-Johnson-Vice-President-Vance-the-first-lady-of-the-United-States-members-o-1756824005317_1756824005320.txt
instance/: political_discourse.db
static/css/: style.css
static/js/: main.js
templates/: ai_results.html  analysis.html  base.html  detailed_analysis.html  feedback.html  index.html  results.html
(+2 files in other folders)
