[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "email-validator>=2.3.0",
    "feedparser>=6.0.11",
    "flask>=3.1.2",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "matplotlib>=3.10.6",
    "nltk>=3.9.1",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "psycopg2-binary>=2.9.10",
    "requests>=2.32.5",
    "scikit-learn>=1.7.1",
    "spacy>=3.8.7",
    "sqlalchemy>=2.0.43",
    "textblob>=0.19.0",
    "trafilatura>=2.0.0",
    "werkzeug>=3.1.3",
    "wordcloud>=1.9.4",
]
